--- a/app/global.css
+++ b/app/global.css
@@ -115,7 +115,7 @@ a {
 }
 
 .mainLogin {
-    height: 68.3vh;
+    height: 59vh;
 }
 
 .carousel {
@@ -245,6 +245,28 @@ a {
     grid-area: text;
 }
 
+.form-label {
+    color: #000;
+    font-size: 1em;
+    justify-content: start;
+    display: flex;
+    font-weight: bold;
+    cursor: pointer;
+    transition: .5s ease-in-out;
+}
+
+.form-control {
+    width: 100%;
+    height: 40px;
+    background: #e0dede;
+    justify-content: center;
+    display: flex;
+    margin: 20px auto;
+    padding: 10px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+}
 
 .mainT {
     flex-direction: column;
@@ -405,6 +427,10 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+}
+
+button:hover {
+    background-color: #001F3F;
 }
 
 
